Microservices/app-backend/k8s/backend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-backend
spec:
  selector:
    matchLabels:
      app: app-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: app-backend
        visualize: "true"
    spec:
      containers:
        - name: app-backend
          image: ibura/app-backend
          ports:
            - containerPort: 8080
