Microservices/app-backend/k8s/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-frontend
spec:
  selector:
    matchLabels:
      app: app-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: app-frontend
        visualize: "true"
    spec:
      containers:
        - name: app-frontend
          image: ibura/app-frontend
          ports:
            - containerPort: 3000
