Microservices/app-backend/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    visualize: "true"
  name: app-backend
spec:
  selector:
    app: app-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
