Microservices/app-backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  rules:
    - http:
        paths:
          - path: /app-frontend
            pathType: Prefix
            backend:
              service:
                name: app-frontend
                port:
                  number: 80
          - path: /app-backend
            pathType: Prefix
            backend:
              service:
                name: app-backend
                port:
                  number: 80
